# scaling_up_Lipschitz_networks

./: .gitignore  LICENSE  README.md  pyproject.toml
lipschitz/data/: __init__.py  data_loader.py  preprocessors.py  typing.py
lipschitz/data/datasets/: __init__.py  cifar10.py  dataset.py  edm_cifar10.py  mnist.py
lipschitz/io_functions/: __init__.py  configuration.py  key_not_found_error.py  parser.py  plotting.py  result_parsing.py  save_results.py  state_dict.py
lipschitz/io_functions/formatting/: __init__.py  memory.py  time.py
lipschitz/models/: __init__.py
lipschitz/models/architectures/: __init__.py  lipschitz_convolutional_network.py  lipschitz_mlp.py  simple_conv_net.py
lipschitz/models/layers/: __init__.py  initializer.py  train_val_cache_decorator.py  typing.py
lipschitz/models/layers/basic/: simple_conv.py  (+2 more)
lipschitz/scripts/: delete_results.py
lipschitz/scripts/basic/: calculate_mean.py  count_parameters.py  download_data.py  print_model_info.py  time_batch.py  time_batch_all.py  time_epoch.py
lipschitz/scripts/evaluate/: margins.py  test_time_augmentation.py
lipschitz/scripts/plot/: argmax.py  cra_per_margin.py  result_bars.py  results.py
lipschitz/scripts/train/: main.py  on_principal_components.py  timed.py
lipschitz/training/: augmentation.py  evaluate.py  optimizer.py  scheduler.py  tracker.py  trainer.py
lipschitz/training/metrics/: __init__.py  basic.py  cra.py  metric.py  offset_xent.py
unittests/datasets/: test_cifar10.py
unittests/io_functions/: test_configuration.py
unittests/training/: test_print_occasionally.py
(+11 files in other folders)
